devops/k8s/base/angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular
  namespace: saas-system
spec:
  selector:
    app: angular
  ports:
    - name: http
      port: 80
      targetPort: 80
